added notebook 2 chat memory

--- a/1 - hello world.ipynb
+++ b/1 - hello world.ipynb
@@ -5,7 +5,6 @@
    "id": "3867e53f-be36-4181-9e2b-5539736f16fa",
    "metadata": {},
    "source": [
-    "\n",
     "## Introduction\n",
     "This notebook is designed to guide you through the process of building a Language Learning Model (LLM) application using Langchain and OpenAI's GPT-4 LLM. "
    ]
@@ -95,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='¡Hola! ¿Cómo estás?', response_metadata={'token_usage': {'completion_tokens': 7, 'prompt_tokens': 22, 'total_tokens': 29}, 'model_name': 'gpt-4o', 'system_fingerprint': 'fp_319be4768e', 'finish_reason': 'stop', 'logprobs': None}, id='run-15e63cc5-f506-44b4-81fb-137ed0cfdede-0', usage_metadata={'input_tokens': 22, 'output_tokens': 7, 'total_tokens': 29})"
+       "AIMessage(content='¡Hola, GP! ¿Cómo estás?', response_metadata={'token_usage': {'completion_tokens': 9, 'prompt_tokens': 26, 'total_tokens': 35}, 'model_name': 'gpt-4o', 'system_fingerprint': 'fp_319be4768e', 'finish_reason': 'stop', 'logprobs': None}, id='run-bfe1dc1d-4968-465d-81aa-c05683a24de7-0', usage_metadata={'input_tokens': 26, 'output_tokens': 9, 'total_tokens': 35})"
       ]
      },
      "execution_count": 3,
@@ -107,7 +106,7 @@
     "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "system_message = \"Respond back to the user greeting in Spanish\"\n",
-    "human_message = \"Hello AI!\"\n",
+    "human_message = \"Hello AI! My name is GP\"\n",
     "\n",
     "messages = [\n",
     "    SystemMessage(content=system_message),\n",
@@ -148,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "'¡Hola! ¿Cómo estás?'"
+       "'¡Hola GP! ¿Cómo estás?'"
       ]
      },
      "execution_count": 5,
@@ -191,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "'¡Hola! ¿Cómo estás?'"
+       "'¡Hola GP! Mucho gusto en conocerte. Espero que estés teniendo un buen día.'"
       ]
      },
      "execution_count": 7,
