--- a/2 - summarize.ipynb
+++ b/2 - summarize.ipynb
@@ -8,7 +8,9 @@
     "## Introduction\n",
     "This notebook is designed to guide you through the process of building a Language Learning Model (LLM) application that creates a summary of the content from a URL. It uses Langchain and OpenAI's GPT-4 LLM. \n",
     "\n",
-    "#### URL ---> Content (docs) ---> LLM ---> Summary"
+    "#### URL ---> Content (docs) ---> LLM ---> Summary\n",
+    "\n",
+    "The process involves fetching the content from a specified URL, processing the content to extract relevant information, and then using an LLM to generate a concise summary. This notebook will walk you through each step of this process, providing detailed explanations and examples."
    ]
   },
   {
@@ -42,7 +44,7 @@
    "metadata": {},
    "source": [
     "#### Document loaders\n",
-    "Document loaders are a capability LangChain provides to get content that can be used for LLM apps"
+    "Document loaders are a capability LangChain provides to get content that can be used for LLM apps. They are essential for fetching and preparing the content before summarization. In this example, we will use a WebBaseLoader to load content from a specified URL."
    ]
   },
   {
