--- a/4 - RAG.ipynb
+++ b/4 - RAG.ipynb
@@ -15,13 +15,13 @@
    "metadata": {},
    "source": [
     "### RAG: Retrieval Augmented Generation\n",
-    "One of the main applications of LLMs has been to build Q&A applications of custom content. LLMs are trained on a lot of data. However, sometimes we only want answers based on our own content. In order to make this work, we first have to ingest and store our content in a format that is easy to search and retrieve\n",
+    "Retrieval Augmented Generation (RAG) combines the power of language models with external content retrieval to answer questions based on specific content. This approach allows for more accurate and contextually relevant responses by leveraging a database of information.\n",
     "\n",
-    "#### URL ---> Content ---> Split ---> Embed ---> Store in Vector DB\n",
+    "The process involves several key steps:\n",
+    "- **Content Retrieval and Storage**: First, we ingest and store our content in a searchable format. This involves fetching content from a URL, splitting it into manageable parts, embedding these parts for semantic search, and storing them in a Vector DB.\n",
+    "- **Question Answering**: When a user question is posed, the system retrieves relevant content from the Vector DB and uses it to generate an answer with the LLM.\n",
     "\n",
-    "The vector DB we're using here is Chroma DB. One the content is stored, the user question is then answered based on the ingested content\n",
-    "\n",
-    "#### User question ---> Retrieve relevant content from vector DB ---> LLM ---> Answer"
+    "This notebook will walk you through setting up a RAG system using ChromaDB for content storage and retrieval, and OpenAI's GPT-4 for question answering."
    ]
   },
   {
@@ -81,8 +81,11 @@
     ")\n",
     "docs = loader.load()\n",
     "\n",
+    "# Split the content into manageable chunks for better retrieval.\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
     "splits = text_splitter.split_documents(docs)\n",
+    "\n",
+    "# Embed the chunks and store them in ChromaDB for efficient retrieval.\n",
     "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings())"
    ]
   },
@@ -98,7 +101,7 @@
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
-    "# Retrieve and generate using the relevant snippets of the blog.\n",
+    "# Set up the RAG chain for retrieving and generating answers.\n",
     "retriever = vectorstore.as_retriever()\n",
     "system_prompt = (\"\"\"\n",
     "You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\n",
