--- a/5 - schema_extraction.ipynb
+++ b/5 - schema_extraction.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This notebook is designed to guide you through the process of building a schema extraction application using Langchain and OpenAI's GPT-4 LLM. "
+    "This notebook is designed to guide you through the process of building a schema extraction application using Langchain and OpenAI's GPT-4 LLM. Schema extraction involves identifying and extracting structured information from unstructured text, which can be particularly useful in understanding and organizing data in a more accessible format."
    ]
   },
   {
