--- a/6 - tools.ipynb
+++ b/6 - tools.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This notebook is designed to guide you through the process of building tools for agents using Langchain. Tools are a key part of agents and a great way to add more capabilities to an agent and the agent can combine these in useful ways"
+    "This notebook is designed to guide you through the process of building tools for agents using Langchain. Tools are a key part of agents and a great way to add more capabilities to an agent and the agent can combine these in useful ways. In this notebook, we will explore how to create custom tools and integrate them with agents to enhance their capabilities."
    ]
   },
   {
@@ -119,7 +119,7 @@
    "metadata": {},
    "source": [
     "#### Custom tools\n",
-    "We don't just have to use the default tools from LangChain. We can define our own custom tools. A tool can be any method that has clearly defined inputs and outputs so that the agent can invoke it. Function that adds two numbers together, it can be a tool. Function that calls a custom company API, it can be a tool. Function that generates code from a custom LLM, it can be a tool. This really opens up a lot of opportunities to extend an agent with many capabilities"
+    "We don't just have to use the default tools from LangChain. We can define our own custom tools. A tool can be any method that has clearly defined inputs and outputs so that the agent can invoke it. Function that adds two numbers together, it can be a tool. Function that calls a custom company API, it can be a tool. Function that generates code from a custom LLM, it can be a tool. This really opens up a lot of opportunities to extend an agent with many capabilities. In this section, we will explore how to define and integrate custom tools with agents."
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "source": [
     "### Web retriever tool\n",
-    "Let's build a tool that can fetch the content of a URL, this is something we've had to do in multiple previous notebooks"
+    "Let's build a tool that can fetch the content of a URL, this is something we've had to do in multiple previous notebooks. This tool will be particularly useful for agents that need to gather information from the web to answer questions or perform tasks."
    ]
   },
   {
@@ -215,7 +215,7 @@
    "metadata": {},
    "source": [
     "#### Summarizer tool\n",
-    "Let's convert what we did in summarize notebook into a tool too"
+    "Let's convert what we did in summarize notebook into a tool too. This tool will enable agents to generate concise summaries of text content, which can be useful for quickly understanding the gist of large documents or web pages."
    ]
   },
   {
