Add Python virtual environment setup instructions and image placeholders

--- a/1 - hello world.ipynb
+++ b/1 - hello world.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "image-placeholder",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3867e53f-be36-4181-9e2b-5539736f16fa",
    "metadata": {},
    "source": [
@@ -240,7 +248,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+   "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
