--- a/2 - summarize.ipynb
+++ b/2 - summarize.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "placeholder-image",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9d5b71c9-dacd-49e0-bb4b-c98398b0396a",
    "metadata": {},
    "source": [
