--- a/4 - RAG.ipynb
+++ b/4 - RAG.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "placeholder-image",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f0a5a431-028a-4657-b6e0-ede6af1e8a82",
    "metadata": {},
    "source": [
