--- a/6 - tools.ipynb
+++ b/6 - tools.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "placeholder-image",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "333d752e-589e-4d79-a39c-32c11bdfbcbf",
    "metadata": {},
    "source": [
