--- a/3 - chat.ipynb
+++ b/3 - chat.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "image-placeholder",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "947468ef-9ab4-4b81-89b5-305ba4edbd94",
    "metadata": {},
    "source": [
