--- a/5 - schema_extraction.ipynb
+++ b/5 - schema_extraction.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "placeholder-image",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "33b99b7e-20b1-4d61-9a12-246672063f2f",
    "metadata": {},
    "source": [
