--- a/7 - agents.ipynb
+++ b/7 - agents.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "image-placeholder",
+   "metadata": {},
+   "source": [
+    "![](../assets/placeholder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1e7e636c-3282-490a-80ef-720013e926ae",
    "metadata": {},
    "source": [
